Finalizando o texto html

--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@
 <br> <br>
 
 
-<h1>Projeto Arvore das emoções</h1>
-<p>Um projeto que eu fiz no primeiro periodo no Cesar, seria a árvore das emoções.</p>
-<p>A árvore é uma representação da sociedade, nela estão dispostas flores de LED que simbolizam os indivíduos e a mudança das cores das LEDs traduz a pluralidade de emoções presentes no espaço. O jogo funciona de maneira que o usuário tem dois modos de interação: solo e cooperativo. No modo solo consta no display LCD a pergunta "como você está se sentindo hoje?" e é apresentado um termômetro emocional com emojis representando as principais emoções, ao clicar nos botões correspondentes a árvore fornece um feedback visual iluminando desde a base do tronco, seguindo pelo galhos até chegar em uma das flores de LED na copa da árvore representando o espectro atual do usuário. Todo o trajeto percorrido pela luz constitui o cultivar daquele sentimento. O modo cooperativo é construído de forma simultânea a partir da soma das respostas emocionais, permanecendo acesas as últimas 10 emoções captadas pela árvore. Os dados também serão armazenados para posterior análise do termômetro emocional e comparação com a mudança de localização da árvore.
-</p> <p>O projeto foi feito em arduino usando C++</p>
-<br><br>
-
-
-
 <h1>Lista de link que eu uso para estudos</h1>
 <h2>Sites para estudar:</h2>
 <p><a href="https://www.djangoproject.com/" target="_blank">Django</a></p>
@@ -39,9 +31,12 @@
 
 <h1>O que me inspira</h1>
 
-<p>Sobre o que me inspira a ser uma pessoa melhor e poder ganhar dos desafio da vida, são meus pais, principalmente uma </p>
+<p>Sobre o que me inspira a ser uma pessoa melhor e poder ganhar dos desafio da vida, são meus pais e meu senhor, Jesus Cristo, eles são a minha inspiração para ser uma pessoa boa, estudar e trabalhar. </p>
+<p>Pois, o importante da vida é conseguir ter uma vida tranquila, com trabalho, irmãos, família, fé e paz.</p>
+<br><br>
 
-
+<h1>Projeto feito para a matéria de projetos 1 na Cesar School</h1>
+<h1><a href="projetoArvoreEmocoes.html"> Projeto árvore das emoções</a></h1>
 
 
 
