Ajuste html para 3 paginas

--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
 <br> <br>
 
 
-<h1>Lista de link que eu uso para estudos</h1>
-<h2>Sites para estudar:</h2>
-<p><a href="https://www.djangoproject.com/" target="_blank">Django</a></p>
-<p><a href="https://www.django-rest-framework.org/" target="_blank">Django Rest Framework</a></p>
-<p><a href="https://www.w3schools.com/" target="_blank">Várias linguagens de porogramação</a></p>
-<p><a href="https://leetcode.com/" target="_blank">Lógica de programação</a></p>
-<br><br>
+
 
 <h1>O que me inspira</h1>
 
@@ -35,6 +29,10 @@
 <p>Pois, o importante da vida é conseguir ter uma vida tranquila, com trabalho, irmãos, família, fé e paz.</p>
 <br><br>
 
+<h1>Sites que eu uso para estudo</h1>
+<h1><a href="listaLinks.html"> sites</a></h1>
+
+<br><br>
 <h1>Projeto feito para a matéria de projetos 1 na Cesar School</h1>
 <h1><a href="projetoArvoreEmocoes.html"> Projeto árvore das emoções</a></h1>
 
