--- a/projetoArvoreEmocoes.html
+++ b/projetoArvoreEmocoes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Projeto Arvore das emoções</h1>
-<p>Um projeto que eu fiz no primeiro periodo no Cesar, seria a árvore das emoções.</p>
+<p>Um projeto que eu fiz no primeiro periodo no Cesar, seria um jogo interativo, a árvore das emoções.</p>
 <p>A árvore é uma representação da sociedade, nela estão dispostas flores de LED que simbolizam os indivíduos e a mudança das cores das LEDs traduz a pluralidade de emoções presentes no espaço. O jogo funciona de maneira que o usuário tem dois modos de interação: solo e cooperativo. No modo solo consta no display LCD a pergunta "como você está se sentindo hoje?" e é apresentado um termômetro emocional com emojis representando as principais emoções, ao clicar nos botões correspondentes a árvore fornece um feedback visual iluminando desde a base do tronco, seguindo pelo galhos até chegar em uma das flores de LED na copa da árvore representando o espectro atual do usuário. Todo o trajeto percorrido pela luz constitui o cultivar daquele sentimento. O modo cooperativo é construído de forma simultânea a partir da soma das respostas emocionais, permanecendo acesas as últimas 10 emoções captadas pela árvore. Os dados também serão armazenados para posterior análise do termômetro emocional e comparação com a mudança de localização da árvore.
 </p> <p>O projeto foi feito em arduino usando C++</p>
 <br><br>
