feito o css e ajeitado o html

--- a/listaLinks.html
+++ b/listaLinks.html
@@ -1,6 +1,30 @@
-<h1>Lista de link que eu uso para estudos</h1>
-<h2>Sites para estudar:</h2>
-<p><a href="https://www.djangoproject.com/" target="_blank">Django</a></p>
-<p><a href="https://www.django-rest-framework.org/" target="_blank">Django Rest Framework</a></p>
-<p><a href="https://www.w3schools.com/" target="_blank">Várias linguagens de porogramação</a></p>
-<p><a href="https://leetcode.com/" target="_blank">Lógica de programação</a></p>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Links para Estudos</title>
+    <link rel="stylesheet" href="listaLinks.css"> 
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Lista de Links que Uso para Estudos</h1>
+        </header>
+
+        <section class="links">
+            <h2>Sites para:</h2>
+            <ul>
+                <li><a href="https://www.djangoproject.com/" target="_blank">Django</a></li>
+                <li><a href="https://www.django-rest-framework.org/" target="_blank">Django Rest Framework</a></li>
+                <li><a href="https://www.w3schools.com/" target="_blank">Várias linguagens de programação</a></li>
+                <li><a href="https://leetcode.com/" target="_blank">Lógica de programação</a></li>
+            </ul>
+        </section>
+
+        <footer>
+            <a href="index.html">Voltar para a Biografia</a>
+        </footer>
+    </div>
+</body>
+</html>
