--- a/index.html
+++ b/index.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Biografia</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>Quem sou eu</h1>
+            <p>Olá, eu me chamo Vagner, tenho 21 anos e estou cursando Ciência da Computação na Cesar School.</p>
+            <p>Eu gosto de jogar futebol, leio bastante e pretendo virar um programador Full Stack.</p>
+        </header>
 
-    <h1>Quem sou eu</h1>
-    <p>Olá, eu me chamo Vagner, tenho 21 anos e estou cursando Ciência da computação na Cesar School. </p>
-    <p>Eu gosto de jogar futebol, leio bastante e pretendo virar um programador Full Stack.</p>
-    <br> <br>
-       
+        <section>
+            <h1>Meus interesses profissionais</h1>
+            <p>Eu tenho interesse na área de desenvolvimento de sistemas, pois eu possuo um curso profissionalizante de programador de sistemas no Senac.</p>
+            <p>Com isso, meu interesse é voltado para o Django como uma framework de Python que me ajuda a desenvolver sistemas. Contudo, eu pretendo, além de continuar aprendendo Django, ainda aprender um framework de Front-End.</p>
+        </section>
 
-    <h1>Meus interesses profissionais</h1>
-        <p>Eu tenho interesse na área de desenvolvimento de sistemas,
-             pois eu possuo um curso profissionalizante de programador de sistemas no Senac. </p>
-        <p>Com isso, meu interesse é voltado para o Django como uma framework de Python que me ajuda a desenvolver sistemas.
-           Contudo, eu pretendo, além de continuar aprendendo Django, ainda aprender um framework de FrontEnd.</p>
-<br> <br>
+        <section>
+            <h1>O que me inspira</h1>
+            <p>Sobre o que me inspira a ser uma pessoa melhor e poder ganhar dos desafios da vida, são meus pais e meu senhor, Jesus Cristo. Eles são a minha inspiração para ser uma pessoa boa, estudar e trabalhar.</p>
+            <p>Pois, o importante da vida é conseguir ter uma vida tranquila, com trabalho, irmãos, família, fé e paz.</p>
+        </section>
 
+        <section>
+            <h1>Sites que eu uso para estudo</h1>
+            <h2><a href="listaLinks.html">Sites</a></h2>
+        </section>
 
-
-
-<h1>O que me inspira</h1>
-
-<p>Sobre o que me inspira a ser uma pessoa melhor e poder ganhar dos desafio da vida, são meus pais e meu senhor, Jesus Cristo, eles são a minha inspiração para ser uma pessoa boa, estudar e trabalhar. </p>
-<p>Pois, o importante da vida é conseguir ter uma vida tranquila, com trabalho, irmãos, família, fé e paz.</p>
-<br><br>
-
-<h1>Sites que eu uso para estudo</h1>
-<h1><a href="listaLinks.html"> sites</a></h1>
-
-<br><br>
-<h1>Projeto feito para a matéria de projetos 1 na Cesar School</h1>
-<h1><a href="projetoArvoreEmocoes.html"> Projeto árvore das emoções</a></h1>
-
-
-
-    
+        <section>
+            <h1>Projeto feito para a matéria de Projetos 1 na Cesar School</h1>
+            <h2><a href="projetoArvoreEmocoes.html">Projeto Árvore das Emoções</a></h2>
+        </section>
+    </div>
 </body>
 </html>
