--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
             <h2><a href="projetoArvoreEmocoes.html">Projeto Árvore das Emoções</a></h2>
         </section>
     </div>
+    <script>alert("Seja bem-vindo a minha biografia")</script>
 </body>
 </html>
