heading in section

--- a/projetoArvoreEmocoes.html
+++ b/projetoArvoreEmocoes.html
@@ -9,10 +9,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>Projeto Árvore das Emoções</h1>
+            <h1>Projeto</h1>
         </header>
 
         <section>
+            <h2>Projeto árvore das emoções</h2>
             <p>Um projeto que eu fiz no primeiro período no Cesar, seria um jogo interativo, a árvore das emoções.</p>
             <p>A árvore é uma representação da sociedade, nela estão dispostas flores de LED que simbolizam os indivíduos e a mudança das cores das LEDs traduz a pluralidade de emoções presentes no espaço. O jogo funciona de maneira que o usuário tem dois modos de interação: solo e cooperativo.</p>
             <p>No modo solo consta no display LCD a pergunta "como você está se sentindo hoje?" e é apresentado um termômetro emocional com emojis representando as principais emoções. Ao clicar nos botões correspondentes, a árvore fornece um feedback visual iluminando desde a base do tronco, seguindo pelos galhos até chegar em uma das flores de LED na copa da árvore, representando o espectro atual do usuário. Todo o trajeto percorrido pela luz constitui o cultivar daquele sentimento.</p>
